syntax = "proto3";

package proxy_proto;

import "movie.proto";

option go_package = "./;proto";

message GetAllMovieRequest{
    string query = 1[json_name = "query"];
}

message GetAllMovieResponse{
   repeated Movie movie = 1[json_name = "movie"];
}
