syntax = "proto3";

package proxy_proto;

import "elasticsearch.proto";


option go_package = "./;proto";


message SearchMovieAggregatorRequest{
  string redis_key = 1 [json_name = "redis_key"];
  string query = 2 [json_name = "query"];
}

message SearchMovieAggregatorResponse{
  TotalHits hits = 1 [json_name = "hits"];
}